# insforge-hack

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  README.md
.agents/skills/testing-planner/: SKILL.md
.github/workflows/: extractor-tests.yml
db/migrations/: 20260606120000_init.sql
migrations/: 20260606230000_extractor-pool.sql
orchestrator/: .dockerignore  Dockerfile  README.md  pyproject.toml
orchestrator/app/: config.py  main.py  orchestrator.py
orchestrator/app/agents/: configurator.py  extractor_generator.py  intake.py  planner.py  researcher.py  scam.py  synthesizer.py
orchestrator/app/db/: client.py  poll.py
orchestrator/app/tools/: page_meta.py  sources.py
orchestrator/app/tools/extractors/: __init__.py  apple.md  apple.py  lg.md  lg.py  newegg.com.md  newegg_com.py  tftcentral.md  tftcentral.py
orchestrator/tests/: conftest.py  test_extractor_apple.py  test_extractor_lg.py  test_extractor_tftcentral.py  test_extractors.py
orchestrator/tests/fixtures/extractors/apple/ftqu3ll-refurb-iphone-15-pro/: expected.json  input.html  spec.json
orchestrator/tests/fixtures/extractors/lg/32gs95ue-b-gaming-monitor/: expected.json  input.html
orchestrator/tests/fixtures/extractors/newegg.com/: expected.json  input.html  spec.json
orchestrator/tests/fixtures/extractors/tftcentral/lg-32gs95ue/: expected.json  input.html  spec.json
web/: package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/intent/[id]/: IntentDashboard.tsx  page.tsx
web/src/lib/: insforge.ts
